# deterministic-ai-agent

./: .gitignore  BENCHMARK.md  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml  temp_script.py
benchmarks/: benchmark_onnx_standalone.py  compare_onnx.py  export_encoder_only.py  onnx_exporter.py  profiler.py  results.json
config/: devices.yaml
data/: sample_data.json
deterministic_ai_agent/adapter/: classifier.py  onnx_classifier.py
deterministic_ai_agent/encoder/: onnx_model.py
deterministic_ai_agent/executor/: engine.py  registry.py
deterministic_ai_agent/ner/: __init__.py  extractor.py
examples/: demo.rs  test_agent.rs  train_intent.rs  train_ner.rs
src/: encoder.rs  lib.rs  main.rs  model.rs  ner.rs  train.rs
src/adapter/: classifier.py  onnx_classifier.py
src/encoder/: model.py  onnx_model.py
src/executor/: engine.py
src/ner/: extractor.py
tests/: test_adapter.py  test_engine.py  test_hybrid_ner.py  test_ner.py  test_ner_hardened.py  test_v2_logic.py
tools/: __init__.py  build_production_models.py  diagnostics.py  generate_ot_data.py  inventory.py  quantize_encoder_manually.py  quantize_onnx.py
